# xminad

./: .gitignore  LICENSE  Makefile  checkrc.hs  default.nix  shell.nix  taffybar.hs  xminad.cabal  xminad.hs  xminad.nix
config/: xminad.desktop  xmobar.config
pic/: Makefile  ORIGIN
src/XMonad/Actions/: Readme.md
src/XMonad/Layout/: TopicDir.hs
src/XMonad/Local/: Actions.hs  Config.hs  EventHook.hs  GridSelect.hs  Keys.hs  Layout.hs  LogHook.hs  Main.hs  ManageHook.hs  Mouse.hs  Music.hs  NamedScratchpad.hs  Operations.hs  Prompt.hs  TopicSpace.hs  Util.hs  Workspaces.hs  XConfig.hs
