Name:          xminad
Version:       0.1
Author:        Michal Minar <mic.liamg@gmail.com>
Maintainer:    Michal Minar <mic.liamg@gmail.com>
License:       BSD3
License-File:  LICENSE
Category:      Graphics
Stability:     experimental
Build-Type:    Simple
Cabal-Version: >= 1.8

Library
    Exposed-Modules: 
        XMonad.Layout.TopicDir
        XMonad.Local.Actions
        XMonad.Local.Config
        XMonad.Local.GridSelect
        XMonad.Local.Keys
        XMonad.Local.Layout
        XMonad.Local.NamedScratchpad
        XMonad.Local.TopicSpace
        XMonad.Local.Workspaces

    HS-Source-Dirs: src
    GHC-Options: -Wall -Werror

    Build-Depends:
         base           >= 4.0  && < 5.0
       --, X11            >= 1.6  && < 2.0
       --, bytestring     >= 0.9  && < 0.11
       -- , cairo          >= 0.13 && < 0.14
       , containers
       , directory      >= 1.1  && < 1.3
       , MissingH       >= 1.0  && < 1.3
       --, filepath       >= 1.3  && < 1.4
       , libmpd         >= 0.8  && < 1.0
       --, parsec         >= 3.1  && < 3.2
       --, regex-compat   >= 0.90 && < 1.0
       --, text           >= 0.11 && < 1.3
       , xmonad         >= 0.11 && < 0.12
       , xmonad-contrib >= 0.11
       , xmonad-extras  >= 0.11 && < 0.12

Executable xminad
    Main-Is: xminad.hs
    GHC-Options: -Wall -Werror
    Build-Depends :
         base           >= 4.0  && < 5.0
       , dbus           >= 0.10 && < 0.12
       --, bytestring     >= 0.9  && < 0.11
       -- , cairo          >= 0.13 && < 0.14
       , containers
       --, directory      >= 1.1  && < 1.3
       --, filepath       >= 1.3  && < 1.4
       , libmpd         >= 0.8  && < 1.0
       --, parsec         >= 3.1  && < 3.2
       , MissingH       >= 1.0  && < 1.3
       , regex-compat   >= 0.90 && < 1.0
       , regex-posix    >= 0.90 && < 1.0
       , text           >= 0.11 && < 1.3
       , utf8-string    >= 0.3  && < 0.5
       , X11            >= 1.6  && < 2.0
       , xminad
       , xmonad         >= 0.11 && < 0.12
       , xmonad-contrib >= 0.11
       , xmonad-extras  >= 0.11 && < 0.12
